# beuchat

./: .env  .gitignore  config.json  config.json.php  config.php  main.py  pyproject.toml
public/: commande.php  db.php  export_commandes.php  export_produits.php  export_receptions.php  index.php  logs_actions.php  logs_receptions.php  logs_updates.php  produit.php  produits.php  reception_commande.php  reception_detail.php  reception_detail_produit.php  update.php
public/assets/: menu.css  style.css
public/inc/: bootstrap.php  footer.php  header.php  logger.php
script/: update_db.py
src/beuchat_reception/: db.py  scraper.py
src/beuchat_reception/auth/: __init__.py  client.py
src/beuchat_reception/export/: __init__.py  excel.py
src/beuchat_reception/parsing/: details.py  orders.py  products.py
src/beuchat_reception/repository/: order_repository.py
tests/: test_db.py  test_scraper.py
